# AIRMAN-Skynet-TA

./: .dockerignore  .env.example  Dockerfile  README.md  airman.db  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: aircraft.py  audit_logs.py  auth.py  bases.py  defects.py  sorties.py  training_progress.py  users.py
app/core/: config.py  errors.py  permissions.py  querying.py  security.py
app/db/: database.py  models.py  seed.py
app/schemas/: aircraft.py  audit_log.py  auth.py  base.py  defect.py  sortie.py  training_progress.py  user.py
app/services/: aircraft_service.py  audit_service.py  defect_service.py  sortie_service.py  training_service.py
docs/: ai-usage-disclosure.md  api-contract.md  architecture.md  business-rules.md  known-limitations.md
migrations/: README.md  env.py
migrations/versions/: 0001_initial_schema.py
tests/: conftest.py  test_aircraft.py  test_audit_logs.py  test_base_scope.py  test_rbac.py  test_sorties.py  test_training_progress.py
